# dak

./: .bzrignore  .coveragerc  .cvsignore  .gitignore  .gitlab-ci.yml  COPYING-PSF  ChangeLog  ChangeLog.old  Makefile  README  README.coding  README.md  THANKS  TODO  add_constraints.sql  alembic.ini  alicia  alyson  amber  andrea  apt.conf  apt.conf-non-US  apt.conf-security  apt.conf.buildd  apt.conf.buildd-security  apt.conf.stable  apt.conf.stable-non-US  ashley  billie  cameron  catherine  charisma  christina  cindy  claire.py  copyoverrides  cron.buildd  cron.buildd-security  cron.daily  cron.daily-non-US  (+65 more)
alembic/: env.py
config/: variables
contrib/: README  fix.1  fix.2  fix.3  fix.4  fix.6  fix.7  fix.8  fix.9  fix.b  hack.1  hack.2  hack.3  hack.4  hack.5  hack.6  python_1.5.2-fcntl_lockf.diff  signature_checking_optional-doogie.diff
dak/: .generate_contents.py.swp  ChangeLog  acl.py  add_user.py  admin.py  archive_dedup_pool.py  auto_decruft.py  bts_categorize.py  check_archive.py  check_overrides.py  check_proposed_updates.py  check_transitions.py  clean_proposed_updates.py  clean_queues.py  clean_suites.py  compare_suites.py  contents.py  control_overrides.py  control_suite.py  copy_installer.py  cruft_report.py  dak.py  daklib  decode_dot_dak.py  dominate.py  edit_transitions.py  examine_package.py  export.py  export_suite.py  external_overrides.py  find_null_maintainers.py  generate_contents.py  generate_filelist.py  generate_index_diffs.py  generate_packages_sources.py  generate_packages_sources2.py  generate_releases.py  generate_releases2.py  graph.py  import.py  (+47 more)
daklib/: .#dbconn.py  .queue.py.swp  Config.py  DBConn.py  Singleton.py  announce.py  aptversion.py  architecture.py  archive.py  binary.py  changes.py  changesutils.py  checks.py  command.py  compress.py  config.py  conftest.py  contents.py  cruft.py  dak_exceptions.py  dakapt.py  daklog.py  dakmultiprocessing.py  daksql.py  daksubprocess.py  database.py  dbconn.py  extensions.py  externalsignature.py  filewriter.py  formats.py  fstransactions.py  gpg.py  holding.py  import_repository.py  lintian.py  lists.py  (+22 more)
tools/dsync-0.0/: COMPILING  COPYING  Makefile  configure  configure.in
tools/dsync-0.0/buildlib/: archtable  environment.mak.in  library.mak  makefile.in  sizetable  tools.m4
tools/dsync-0.0/cmdline/: dsync-cdimage.cc  dsync-flist.cc  dsync-flist.h  makefile  path-utils.cc
tools/dsync-0.0/debian/: changelog  control  postinst  rules  shlibs.local
tools/dsync-0.0/doc/: dsync-flist.1.yo  filelist.sgml  makefile
tools/dsync-0.0/doc/examples/: dsync.conf
tools/dsync-0.0/libdsync/: compare.cc  compare.h  filefilter.cc  filefilter.h  filelist.cc  filelist.h  filelistdb.cc  filelistdb.h  genfilelist.cc  genfilelist.h  makefile  rsync-algo.cc  rsync-algo.h
tools/dsync-0.0/libdsync/contrib/: bitmap.cc  bitmap.h  cmndline.cc  cmndline.h  configuration.cc  configuration.h  error.cc  error.h  fileutl.cc  fileutl.h  md4.cc  md4.h  md5.cc  md5.h  mmap.cc  mmap.h  slidingwindow.cc  slidingwindow.h  strutl.cc  strutl.h  system.h
tools/dsync-0.0/test/: fftest.cc  makefile  pathtest.cc
(+783 files in other folders)
